--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^14.8.1
   google_fonts: ^6.2.1
   shared_preferences: ^2.5.2
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
