--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.17
   go_router: ^14.8.1
   google_fonts: ^6.2.1
+  fl_chart: ^0.70.2
   image_picker: ^1.1.2
   path: ^1.9.1
   path_provider: ^2.1.5
