--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^11.4.0
   shared_preferences: ^2.5.2
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
