--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   permission_handler: ^11.4.0
   shared_preferences: ^2.5.2
   http: ^1.3.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
