--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   camera: ^0.11.1
   carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.8
+  fl_chart: ^0.70.2
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
@@ -38,14 +39,14 @@ dependencies:
   flutter_svg: ^2.0.17
   go_router: ^14.8.1
   google_fonts: ^6.2.1
-  fl_chart: ^0.70.2
+  http: ^1.3.0
+  image_cropper: ^9.1.0
   image_picker: ^1.1.2
+  intl: ^0.20.2
   path: ^1.9.1
   path_provider: ^2.1.5
   permission_handler: ^11.4.0
   shared_preferences: ^2.5.2
-  http: ^1.3.0
-  intl: ^0.20.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
