--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
   shared_preferences: ^2.5.2
+  image: ^4.1.3
 
 dev_dependencies:
   flutter_lints: ^5.0.0
