--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_bloc: ^9.1.0
   flutter_dotenv: ^5.2.1
   flutter_launcher_icons: ^0.14.3
+  flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.17
   go_router: ^15.0.0
   google_fonts: ^6.2.1
