--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
   shared_preferences: ^2.5.2
+  persistent_bottom_nav_bar_v2: ^5.4.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
