--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,12 @@ dependencies:
   image_cropper: ^9.1.0
   image_picker: ^1.1.2
   intl: ^0.20.2
+  logger: ^2.5.0
   path: ^1.9.1
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
-  shared_preferences: ^2.5.2
   persistent_bottom_nav_bar_v2: ^5.4.0
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
