--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   camera: ^0.11.1
   carousel_slider: ^5.0.0
+  collection: ^1.19.1
   cupertino_icons: ^1.0.8
   fl_chart: ^0.71.0
   flutter:
