--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   persistent_bottom_nav_bar_v2: ^5.4.0
   shared_preferences: ^2.5.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
