--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   fl_chart: ^0.71.0
   flutter:
     sdk: flutter
+  flutter_animate: ^4.5.2
   flutter_bloc: ^9.1.0
   flutter_dotenv: ^5.2.1
   flutter_launcher_icons: ^0.14.3
@@ -43,6 +44,7 @@ dependencies:
   flutter_svg: ^2.0.17
   go_router: ^15.0.0
   google_fonts: ^6.2.1
+  google_sign_in: ^7.1.0
   http: ^1.3.0
   image: ^4.1.3
   image_cropper: ^9.1.0
@@ -55,6 +57,7 @@ dependencies:
   persistent_bottom_nav_bar_v2: ^5.4.0
   shared_preferences: ^2.5.2
   shimmer: ^3.0.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
