--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.17
+  freezed_annotation: ^3.1.0
   go_router: ^15.0.0
   google_fonts: ^6.2.1
   google_sign_in: ^7.1.0
@@ -50,6 +51,7 @@ dependencies:
   image_cropper: ^9.1.0
   image_picker: ^1.1.2
   intl: ^0.20.2
+  json_annotation: ^4.9.0
   logger: ^2.5.0
   path: ^1.9.1
   path_provider: ^2.1.5
@@ -60,9 +62,12 @@ dependencies:
   url_launcher: ^6.3.2
 
 dev_dependencies:
+  build_runner: ^2.5.4
   flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^3.1.0
+  json_serializable: ^6.9.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
